The idea is to record here changes that deserve mentioning in
the release notes, as we make them, to make the release process easier.

Next version:

* -named-dest also matches strings in table of contents
* logical page numbers are displayed and used, if a document
  provides them (such as i, ii, iii, etc.)
* improved support for EPS files (requires Ghostscript)

1.6 (2011-05-30)

* display Frequently Read list when no document is open
* add support for displaying DjVu documents
* add support for displaying Postscript documents
  (requires a recent Ghostscript installation)
* add support for displaying a folder containing images
  (to display it, drag the folder over SumatraPDF)
* support clickable links and a Table of Content for XPS documents
* optional previewing of PDF documents in Windows Vista and 7 (creates
  thumbnails and displays documents in Explorer's Preview pane)
* display printing progress and allow to cancel it
* add Print toolbar button

1.5.1 (2011-04-27)

* fixes for crashes

1.5 (2011-04-23)

* add support for displaying XPS documents
* add support for displaying CBZ and CBR comic books
* add "Save Shortcut" to create shortcuts to specific places in a document
* add a basic context menu for copying text, link addresses and comments
  (and saving and printing for the browser plugin)
* add folder browsing (Ctrl+Shift+Right opens the next PDF document in the
  current folder, Ctrl+Shift+Left the previous one)

1.4 (2011-03-12)

* browser plugin for Mozilla Firefox, Google Chrome and Opera for displaying
  PDF documents with SumatraPDF inside the browser (does NOT work under MSIE)
* IFilter for PDF to support searching document contents with
  Windows Desktop Search (full text search from Windows Vista/7's Start Menu)
* add support for AES-256 encrypted documents
* Right Mouse now drags the document (same as Shift+Left),
  Right+Scroll zooms it (same as Ctrl+Scroll)
* add menu item to open with Foxit Reader and PDF-XChange Viewer (if installed)